--- a/app/views/homes/home.html.erb
+++ b/app/views/homes/home.html.erb
@@ -1,1 +1,34 @@
 <% provide(:title, "home" ) %>
+
+<div class="inner">
+	<section class="jumbotron">
+		<div class="container">
+			<div class="row">
+				<div class= "mx-auto">
+					<div class="overview text-center">
+						<h1 class= "mb-3">今日のタスク、完了させることができていますか？</h1>
+						<p>ツミアゲはすべての人に向けた全ての人に向けたタスク宣言サービスです</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="row mb-5">
+				<div class="col-8">
+          <p>今日やることを他の人に宣言することで目標達成に向けて努力することを助けます。</p>
+      	</div>
+        <div class="col-4">
+           <%= image_tag 'pencil.png', width: 400, height: 300 %>
+        </div>
+	    </div>
+
+	    <div class="row">
+				<div class="col-4">
+					<%= image_tag 'laptop.png', width: 400, height: 300 %>
+        </div>
+	      <div class="col-8">
+	      	<p>今日やることを他の人に宣言することで目標達成に向けて努力することを助けます。</p>
+	      </div>
+	    </div>
+		</div>
+	</section>
+</div>
